templates/apm/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: apm-server-sample
  namespace: monitoring
spec:
  #host: apm-server.example.com # override if you don't want to use the host that is automatically generated by OpenShift (<route-name>[-<namespace>].<suffix>)
  tls:
    termination: passthrough # the APM Server is the TLS endpoint
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: apm-server-sample-apm-http
